# Junior

./: .env.example  .replit  DEPLOYMENT.md  README.md  RENDER_DEPLOY.md  SETUP.md  create_icons.py  investment_platform.db  investment_platform.db-shm  investment_platform.db-wal  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  simple_telegram_bot.py  standalone_telegram_bot.py  telegram_bot.db  telegram_bot.py  telegram_investment_bot.py
static/: app.webmanifest  biometric-auth.js  geo-security.js  manifest.json  mobile-pwa.js  mobile-styles.css  offline.html  pwa-notifications.js  sw.js
static/icons/: .gitkeep
templates/: admin_activation.html  admin_dashboard.html  admin_info.html  admin_kyc.html  admin_transactions.html  base.html  dashboard.html  frozen_plans.html  index.html  investment_history.html  login.html  profile.html  project_detail.html  projects.html  register.html  roi_plans.html  security.html  staking_plans.html  support.html  support_ticket.html  support_widget.html  ultra_plans.html
