[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "pyotp>=2.9.0",
    "python-telegram-bot>=22.2",
    "qrcode>=8.2",
    "telegram>=0.0.1",
    "werkzeug>=3.1.3",
]
